# mhc

./: .gitignore  README.md  cabal.project  default.nix  flake.nix  hie.yaml
code/boot/: Prelude.hs  boot-mhc.cabal
code/hanjiru/: hanjiru.cabal
code/hanjiru/apps/demo/: Main.hs
code/hanjiru/src/: Hanjiru.hs  Knot.hs
code/hanjiru/src/Hanjiru/: Input.hs  Interpret.hs  Language.hs  Prelude.hs
code/hanjiru/src/Hanjiru/Interpret/Earley/: Slow.hs
code/hanjiru/src/Hanjiru/Interpret/LR0/: Fast.hs  Slow.hs
code/hanjiru/src/Hanjiru/Prelude/: Free.hs  Input.hs  Knot.hs
code/haskell/: haskell-mhc.cabal
code/haskell-like/: haskell-like-mhc.cabal  haskell-like.cabal
code/haskell-like/HaskellLike/MHC/: Frontend.hs  Inform.hs  Layoutize.hs  Located.hs  Name.hs  Parsec.hs  Report.hs  Token.hs  Tokenize.hs
code/haskell-like/src/HaskellLike/: Frontend.hs  Inform.hs  Layoutize.hs  Located.hs  Name.hs  Parsec.hs  Report.hs  Token.hs  Tokenize.hs
code/haskell-like/src/HaskellLike/Frontend/: Tokenize.hs
code/haskell/Haskell/: MHC.hs
code/hummingbird/: Hummingbird.hs  hummingbird-mhc.cabal
code/hummingbird/Hummingbird/: MHC.hs
code/hummingbird/Hummingbird/MHC/: Bind.hs  Builtin.hs  Expr.hs  Feathers.hs  Name.hs  Parse.hs  Parsec.hs  Rename.hs  Term.hs  Type.hs  Var.hs
code/language-lambek/: default.nix  language-lambek.cabal  test
code/language-lambek/src/Frontend/: Lambek.hs
code/language-lambek/src/Frontend/Lambek/: Prelude.hs  Token.hs  Tokenize.hs
code/language-lambek/src/Internal/: List.hs  Prelude.hs
code/language-lambek/src/Language/: Lambek.hs
code/language-lambek/src/Language/Lambek/: Defn.hs  Ident.hs  Lex.hs  Literal.hs  Name.hs  Parse.hs
code/language-lambek/src/Text/: ParserComb.hs
code/language-lambek/src/Text/PrettyPrint/: HughesPJLite.hs
code/mhc/: MHC.hs  default.nix  mhc.cabal
code/mhc-haskell/: default.nix  mhc-haskell.cabal
code/mhc-haskell/src/Haskell/: Syntax.hs
nix/: build-haskell-internal.nix  build-haskell.nix  sources.nix
nix/hanjiru/: default.nix
nix/haskell-like/: default.nix
nix/language-lambek/: default.nix
nix/mhc/: default.nix
nix/mhc-haskell/: default.nix
