cabal-version: 3.4

name: haskell-like
version: 0

build-type: Simple

library
  exposed-modules:
    HaskellLike.Frontend
    HaskellLike.Inform
    HaskellLike.Layoutize
    HaskellLike.Located
    HaskellLike.Name
    HaskellLike.Report
    HaskellLike.Token
    HaskellLike.Tokenize
  hs-source-dirs: src
  build-depends:
    , base ^>= 4.20
    , containers
    , parsec
    , prettyprinter
    , text
    , transformers
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    KindSignatures
    NoImplicitPrelude
    NoStarIsType
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeApplications
