cabal-version: 3.4

name: haskell-like
version: 0

build-type: Simple

library
  exposed-modules:
    HaskellLike.MHC.Frontend
    HaskellLike.MHC.Inform
    HaskellLike.MHC.Layoutize
    HaskellLike.MHC.Located
    HaskellLike.MHC.Name
    HaskellLike.MHC.Parsec
    HaskellLike.MHC.Report
    HaskellLike.MHC.Token
    HaskellLike.MHC.Tokenize
  hs-source-dirs: .
  build-depends:
    , base ^>= 4.20
    , containers
    , parsec
    , prettyprinter
    , text
    , transformers
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    ImportQualifiedPost
    KindSignatures
    MultiParamTypeClasses
    NoImplicitPrelude
    NoStarIsType
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeAbstractions
    TypeApplications
