cabal-version: 3.4

name: haskell-mhc
version: 0

build-type: Simple

library
  exposed-modules:
    Haskell.MHC
  other-modules:
  hs-source-dirs: .
  build-depends:
    , base ^>= 4.20
    , hanjiru
    , text
  default-language: Haskell2010
  default-extensions:
    GADTs
    ImportQualifiedPost
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    NoStarIsType
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
