cabal-version: 3.4

name: hummingbird-mhc
version: 0

build-type: Simple

library
  exposed-modules:
    Hummingbird
    Hummingbird.MHC.Builtin
    Hummingbird.MHC.Parse
    Hummingbird.MHC.Parsec
    Hummingbird.MHC.Rename
    Hummingbird.MHC.Var
  hs-source-dirs: .
  build-depends:
    , boot-mhc
    , haskell-like-mhc
  default-language: Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NoStarIsType
    RankNTypes
    ScopedTypeVariables
    TupleSections
    TypeAbstractions
    TypeApplications
